--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,14 @@
 body {
   margin: 0;
+  background: -webkit-linear-gradient(left, #FFFFFE 20px, transparent 1%) center, -webkit-linear-gradient(#FFFFFE 20px, transparent 1%) center, #9192FB;
+  background: linear-gradient(90deg, #FFFFFE 20px, transparent 1%) center, linear-gradient(#FFFFFE 20px, transparent 1%) center, #9192FB;
+  background-size: 22px 22px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  
 }
 
 code {
